// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentToggle() good usage render supports negative numeric off or on values 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": 1,
      "isRefined": false,
      "name": "",
      "offFacetValue": Object {
        "count": 2,
        "isRefined": true,
        "name": "",
      },
      "onFacetValue": Object {
        "count": 1,
        "isRefined": false,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render supports negative numeric off or on values 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": 1,
      "isRefined": false,
      "name": "",
      "offFacetValue": Object {
        "count": 2,
        "isRefined": true,
        "name": "",
      },
      "onFacetValue": Object {
        "count": 1,
        "isRefined": false,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render understands cssClasses 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox test-checkbox",
      "label": "ais-ToggleRefinement-label test-label",
      "labelText": "ais-ToggleRefinement-labelText test-labelText",
      "root": "ais-ToggleRefinement test",
    }
  }
  currentRefinement={
    Object {
      "count": 2,
      "isRefined": false,
      "name": "",
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
        "name": "",
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": false,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render when refined 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": 3,
      "isRefined": true,
      "name": "",
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
        "name": "",
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": true,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render when refined 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": 3,
      "isRefined": true,
      "name": "",
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
        "name": "",
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": true,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render with facet values 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": 2,
      "isRefined": false,
      "name": "",
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
        "name": "",
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": false,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render with facet values 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": 2,
      "isRefined": false,
      "name": "",
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
        "name": "",
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": false,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render without facet values 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": null,
      "isRefined": false,
      "name": "",
      "offFacetValue": Object {
        "count": 0,
        "isRefined": false,
        "name": "",
      },
      "onFacetValue": Object {
        "count": null,
        "isRefined": false,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render without facet values 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-ToggleRefinement-checkbox",
      "label": "ais-ToggleRefinement-label",
      "labelText": "ais-ToggleRefinement-labelText",
      "root": "ais-ToggleRefinement",
    }
  }
  currentRefinement={
    Object {
      "count": null,
      "isRefined": false,
      "name": "",
      "offFacetValue": Object {
        "count": 0,
        "isRefined": false,
        "name": "",
      },
      "onFacetValue": Object {
        "count": null,
        "isRefined": false,
        "name": "",
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;
